<resources>
    <string name="jscore_explanation">The J-Score represents the percentile battery life you see relative
        to all other devices being measured by Carat. So, if you have a J-Score of 50, that means
        your expected battery life is better than half of our users; a score of 99 means you have
        better battery life than 99 of our users.
        Of course, a single number does not provide a complete description of your battery life.
        A low J-Score could mean that your device is using a big battery inefficiently or a small
        battery with average efficiency. Similarly, a high J-Score could simply mean that you don\'t
        use your device heavily. Carat computes a huge variety of statistics, and the J-Score is
        just one of them.
    </string>
    <string name="memory_explanation">
        The operating system (OS) classifies your device\'s physical memory as either used or free.
        If memory is used, it means there is currently data there that belongs to some process
        (like one of your apps or the OS, itself). When the device runs
        out of free memory, it needs
        to make room so it can store new data, which means closing apps that might be running in the
        background or asking your apps to throw away data they aren\'t using.
        The OS then further subcategorizes used memory as being either active or inactive,
        depending on whether it was accessed recently or not, respectively. When the OS runs out of
        free memory, it starts reclaiming inactive memory.
        When you open a bunch of apps, the fraction of used memory may increase; when the apps you
        have running are working with lots of data (often an energy-intensive task), the fraction
        of active memory may increase. The OS also preloads often used applications into memory,
        shortening wait times.
    </string>
    <string name="cpu_usage_explanation">CPU Usage shows a percentage of how much of your device\'s
        processing power is currently being used. High percentages mean that the device is fully loaded
        in terms of processing power, such as when playing games or installing new applications.</string>
    <string name="well_behaved_explanation">
        Well-behaved apps use an appropriate amount of energy and don\'t usually require user intervention.
    </string>
    <string name="jscore_dialog_title">J-SCORE</string>
    <string name="what_are_these_numbers_title">What are these numbers?</string>
    <string name="what_are_these_numbers_explanation">Expected benefit is the amount of battery life
        that fixing the hog/bug is expected to yield. Fixing hogs means killing the app and using
        it less, while fixing a bug may mean just restarting the app, updating it to the latest version, or changing some of the app\'s settings.
        <b>Samples</b> shows how many measurements we have of this app, across all users. More samples means the app is common and its energy use well known.
    </string>
    <string name="tutorial_accept">ACCEPT</string>
    <string name="tutorial_eula_text">By proceeding you accept the EULA and privacy policy.</string>
    <string name="tutorial_fragment_main_title">Carat Collaborative Energy Diagnosis</string>
    <string name="tutorial_fragment_main_message">Carat is a research project of the University of Helsinki,
        originally created in collaboration with the AMP Lab at UC Berkeley,
        that helps detect and diagnose battery problems, giving you personalized recommendations.</string>
    <string name="tutorial_fragment_bugs_title">BUGS</string>
    <string name="tutorial_fragment_bugs_message">Bugs are apps that use a lot of energy on a small
        number of devices, including yours. Restarting a buggy app may improve battery life.</string>
    <string name="tutorial_fragment_hogs_title">HOGS</string>
    <string name="tutorial_fragment_hogs_message">Hogs are apps that are correlated with higher
        energy use across many devices. Closing hogs may improve battery life.</string>
    <string name="tutorial_fragment_eula_title">EULA</string>
    <string name="tutorial_fragment_eula_message">
            Carat periodically collects generic information about your device and how you are using it.
            In order to use this application, you need to accept the End-user License Agreement.
    </string>
    <string name="tutorial_fragment_eula_link"><b><u>Read EULA</u></b></string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_carat">CaratActivity</string>
    <string name="title_activity_tutorial">TutorialActivity</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="save_accept_eula">save_accept_eula</string>
    <string name="jscore_value">69</string>
    <string name="jscore_title">J-score</string>
    <string name="dashboard_updated_text">Updated just now</string>
    <string name="dashboard_text_loading">Updating status</string>
    <string name="bugs_amount">7</string>
    <string name="hogs_amount">4</string>
    <string name="view">VIEW</string>
    <string name="actions_amount">4</string>
    <string name="bugs">BUGS</string>
    <string name="hogs">HOGS</string>
    <string name="global_hogs">GLOBAL HOGS</string>
    <string name="statistics">STATISTICS</string>
    <string name="actions">ACTIONS</string>
    <string name="active_battery_life">Active Battery Life</string>
    <string name="battery_life_value">10h 23m</string>
    <string name="my_device">MY DEVICE</string>
    <string name="menu_wifi_only">Use Wifi only</string>
    <string name="menu_hide_apps">Hide apps with a small impact</string>
    <string name="menu_feedback">Give feedback</string>
    <string name="menu_about">About</string>
    <string name="what_are_these_numbers">What are these numbers?</string>
    <string name="bug_list_message">Bugs are apps that use a lot of energy on a small number of devices, including yours.
        Restarting a buggy app may improve battery life.</string>
    <string name="no_bugs_title">You have no bugs.</string>
    <string name="no_bugs_message">Please check back in a week.\n\n
        If your apps are behaving normally, there will be no bugs here.\n\n
        When an app starts to use significantly more energy on your device than on others, it will show up here.</string>
    <string name="hog_list_message">Hogs are apps that are correlated with higher energy use across
        many devices. Closing hogs may improve battery life.</string>
    <string name="no_hogs_title">You have no hogs.</string>
    <string name="no_hogs_message">Please check back in a week.\n\n
        If your apps are behaving normally, there will be no bugs here.\n\n
        When an app starts to use significantly more energy on your device than on others, it will show up here.</string>
    <string name="your_jscore_title">YOUR J-SCORE</string>
    <string name="carat_id_title">Carat ID</string>
    <string name="os_version_title">OS Version</string>
    <string name="device_model_title">Device model</string>
    <string name="device_usage_title">DEVICE USAGE</string>
    <string name="what_are_jscore_numbers">What is a J-Score?</string>
    <string name="process_list_title">PROCESS LIST</string>
    <string name="memory_used_title">Memory used</string>
    <string name="memory_active_title">Memory active</string>
    <string name="cpu_usage_title">CPU usage</string>
    <string name="about_general_title">Carat</string>
    <string name="about_general_message">General about</string>
    <string name="about_general_child_message">Carat is a research project of the University of Helsinki,
        originally created in collaboration with the AMP Lab at UC Berkeley,
        that helps detect and diagnose battery problems, giving you personalized recommendations.
        Carat is under development, so please check back often to see new results. The more you use it,
        the better it will get.
    </string>
    <string name="about_actions_title">Actions</string>
    <string name="about_actions_message">How to use Carat</string>
    <string name="about_actions_child_message">The Actions list tells you how to make your battery last longer and how much improvement to expect.</string>
    <string name="about_bugs_title">Bugs</string>
    <string name="about_bugs_message">See your bugs</string>
    <string name="about_bugs_child_message">Bugs are apps that use a lot of energy on a small number
        of devices, including yours. Restarting a buggy app may improve battery life.</string>
    <string name="about_hogs_title">Hogs</string>
    <string name="about_hogs_message">See your hogs</string>
    <string name="about_hogs_child_message">Hogs are apps that are correlated with higher energy use across
        many devices. Closing hogs may improve battery life.</string>
    <string name="about_collect_title">Collect Data</string>
    <string name="about_collect_message">Info what and how Carat collects data</string>
    <string name="about_collect_child_message">Carat collects and reports generic usage statistics about your phone that allow it to do its job;
        this process involves absolutely no personally identifying information. Period.</string>
    <string name="about_battery_title">Active Battery Life</string>
    <string name="about_battery_message">What does Active Battery Life mean?</string>
    <string name="about_battery_child_message">Active Battery Life approximates the amount of
        time your battery would last if you started from a full charge and discharged the battery at a
        rate that was the average of what Carat observed on your device during active use.
        This average rate excludes times that your device was idle and, as always, cannot account for
        behavior when Carat was not running.
        You may find that this number is much higher or lower than what you expect, but it more closely
        summarizes, statistically speaking, the intensity of your active device use.
    </string>
    <string name="global_results">GLOBAL RESULTS</string>
    <string name="show_global">SHOW GLOBAL</string>
    <string name="all_reports">ALL REPORTS</string>
    <string name="global_general_statistics">GENERAL STATISTICS</string>
    <string name="global_general_all_message">Out of 431,882 installed applications, 9 are energy-intensive
        (Hogs in the Carat App) and 4 are energy anomalies (Bugs).</string>
    <string name="global_general_android_message">Out of 295,665 installed Android applications,
        12 are energy-intensive and 4 are energy anomalies.</string>
    <string name="global_general_ios_message">Out of 136,217 installed iOS applications,
        2 are energy-intensive and 4 are energy anomalies.</string>
    <string name="global_general_users_message">Out of 644,024 users, 49 have at least a
        single energy anomaly.</string>
    <string name="global_general_popular_title">POPULAR DEVICE MODELS</string>
    <string name="global_general_android">Android</string>
    <string name="well_behaved">Well-behaved</string>
    <string name="out_of"><![CDATA[Out of ]]></string>
    <string name="all_installed">installed applications,</string>
    <string name="hog_intensity">are energy-intensive (Hogs in the Carat App) and</string>
    <string name="bug_intensity">are energy anomalies (Bugs).</string>
    <string name="android_installed">installed Android applications,</string>
    <string name="ios_installed">installed iOS applications,</string>
    <string name="users">users,</string>
    <string name="user_intensity">have at least a single energy anomaly.</string>
    <string name="packageName">Package:</string>
    <string name="reported_by">Reported by:</string>
    <string name="version">Version</string>
    <string name="priority">Priority:</string>
    <string name="priorityforeground">Current app</string>
</resources>