<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="edu.berkeley.cs.amplab.carat.android.fragments.tutorial.HogsTutorialFragment"
    android:background="@drawable/tutorial_hogs_bg">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:layout_marginBottom="15dp"
        android:layout_above="@+id/hogs_message"
        android:text="@string/tutorial_fragment_hogs_title"
        style="@style/MediumWhiteText"/>

    <TextView
        android:id="@+id/hogs_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingBottom="100dp"
        android:layout_centerInParent="true"
        android:text="@string/tutorial_fragment_hogs_message"
        style="@style/SmallWhiteText"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom"
        android:background="@color/blue"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <Button
            android:id="@+id/tutorial_accept_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:paddingLeft="40dp"
            android:paddingRight="40dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="25dp"
            android:background="@color/orange"
            android:text="@string/tutorial_accept"
            style="@style/ButtonTextStyle"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tutorial_accept_button"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:layout_marginBottom="10dp"
            android:text="@string/tutorial_eula_text"
            style="@style/SmallGrayText"/>

    </RelativeLayout>

</RelativeLayout>
